After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 645789 - annotations for g_file_*_contents
annotations for g_file_*_contents
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks: 645703
 
 
Reported: 2011-03-27 00:45 UTC by Jonathan Matthew
Modified: 2011-03-31 14:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
add annotations (3.25 KB, patch)
2011-03-27 00:45 UTC, Jonathan Matthew
committed Details | Review

Description Jonathan Matthew 2011-03-27 00:45:06 UTC
g_file_load_contents and friends are only semi-usable in python at the moment, as pygobject assumes that the 'contents' arg is null-terminated.  Adding (array length=length) (element-type guint8) annotations fixes this.
Comment 1 Jonathan Matthew 2011-03-27 00:45:47 UTC
Created attachment 184330 [details] [review]
add annotations
Comment 2 Matthias Clasen 2011-03-27 15:04:46 UTC
Review of attachment 184330 [details] [review]:

Looks fine. Lets commit this after the current code freeze.
Comment 3 Matthias Clasen 2011-03-29 02:11:44 UTC
Change of plans: lets commit this now, so we can have working cover art in 3.0
Comment 4 Jonathan Matthew 2011-03-29 09:44:03 UTC
pushed to master as 95e7aa0
Comment 5 Dan Winship 2011-03-31 14:54:35 UTC
this change causes crashes in gnome-shell (bug 646333), which was relying on the previous (not entirely correct) annotations