introspection: add annotations for g_file_load_contents and friends

https://bugzilla.gnome.org/show_bug.cgi?id=645789